# CowCam

./: CMakeLists.txt  Makefile  PTZ.cpp  PulseAudio.cpp  PulseAudio.h  README.md  argv_split.h  common.h  cow_simple_pulse.c  cowcam  cowcam.cpp  cowcam.h  curl.cpp  dvptz.cpp  dvptz.h  embed_app.cpp  embed_app.h  extract_audio.cpp  extract_video.cpp  folder.h  html_window.cpp  html_window.h  image_memory.h  intro  intro.cpp  intro.h  irc.c  irc.h  muxer.cpp  muxer.h  muxer_SAV.h  networking.cpp  osg.cpp  osg.h  pulse_devices.cpp  read_wave.cpp  readme.md  render_html.h  run_python.cpp  test_serial_ports.cpp  (+2 more)
Plugins/: mkit2  plug_in.cpp
